--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: beautiful-jekyll
 title: emmywh's homepage
 description: Follow this page to see my project updates!
