--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: beautiful-jekyll
+theme: jekyll-theme-minimal
 title: emmywh's homepage
 description: Follow this page to see my project updates!
